--- a/ProjectThralldom/web.config
+++ b/ProjectThralldom/web.config
@@ -8,4 +8,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.webServer>
+    <directoryBrowse enabled="true"/>
+  </system.webServer>
 </configuration>
