--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -51,8 +51,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="Code\Application.ts" />
     <TypeScriptCompile Include="Code\CameraControllers\ICameraController.ts" />
-    <TypeScriptCompile Include="Code\CameraControllers\SmartCameraController.ts" />
-    <TypeScriptCompile Include="Code\CameraControllers\ThirdPersonLockCameraController.ts" />
+    <TypeScriptCompile Include="Code\CameraControllers\SkyrimCameraController.ts" />
     <TypeScriptCompile Include="Code\Character.ts" />
     <TypeScriptCompile Include="Code\GeometryUtils.ts" />
     <TypeScriptCompile Include="Code\IAmmo.ts" />
