--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -19,6 +19,11 @@
   <ItemGroup>
     <Content Include="app.css" />
     <Content Include="Code\StringExtensions.js" />
+    <Content Include="Content\Models\bore\LastFile4.jpg" />
+    <Content Include="Content\Models\bore\untitled3.js" />
+    <Content Include="Content\Models\bore\UVMap.jpg" />
+    <Content Include="Content\Models\bore\withoutUV.js" />
+    <Content Include="Content\Models\bore\withUVs.js" />
     <Content Include="Content\Models\Engineer\engineer.js" />
     <Content Include="Content\Models\Engineer\engineer_head.jpg" />
     <Content Include="Content\Models\Engineer\engineer_red.jpg" />
@@ -32,7 +37,7 @@
     <Content Include="Content\Textures\BlueGreenChecker.png" />
     <Content Include="Content\Textures\RedChecker.png" />
     <Content Include="default.htm" />
-    <Content Include="helvetiker_regular.typeface.js" />
+    <Content Include="Content\Fonts\helvetiker_regular.typeface.js" />
     <Content Include="Scripts\implementations\stats.min.js" />
     <Content Include="Tests\TestingPage.html" />
     <Content Include="web.config">
