--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Content Include="app.css" />
     <Content Include="Code\StringExtensions.js" />
+    <Content Include="Content\Models\bore\AnimJS.js" />
     <Content Include="Content\Models\bore\LastFile4.jpg" />
     <Content Include="Content\Models\bore\untitled3.js" />
     <Content Include="Content\Models\bore\UVMap.jpg" />
@@ -34,10 +35,12 @@
     <Content Include="Content\Models\Spartan\Csword.png" />
     <Content Include="Content\Models\Spartan\spartanCopy.js" />
     <Content Include="Content\Models\Spartan\spartan.js" />
+    <Content Include="Content\Quests\default.js" />
+    <Content Include="Content\Scenes\default.js" />
     <Content Include="Content\Textures\BlueGreenChecker.png" />
     <Content Include="Content\Textures\RedChecker.png" />
     <Content Include="default.htm" />
-    <Content Include="Content\Fonts\helvetiker_regular.typeface.js" />
+    <Content Include="Content\Fonts\Helvetiker.js" />
     <Content Include="Scripts\implementations\stats.min.js" />
     <Content Include="Tests\TestingPage.html" />
     <Content Include="web.config">
@@ -57,21 +60,27 @@
     <TypeScriptCompile Include="Code\Application.ts" />
     <TypeScriptCompile Include="Code\CameraControllers\ICameraController.ts" />
     <TypeScriptCompile Include="Code\CameraControllers\SkyrimCameraController.ts" />
-    <TypeScriptCompile Include="Code\Character.ts" />
+    <TypeScriptCompile Include="Code\FrameInfo.ts" />
+    <TypeScriptCompile Include="Code\Objectives.ts" />
+    <TypeScriptCompile Include="Code\Quest.ts" />
+    <TypeScriptCompile Include="Code\Scene\Character.ts" />
+    <TypeScriptCompile Include="Code\Scene\DynamicObject.ts" />
     <TypeScriptCompile Include="Code\GeometryUtils.ts" />
-    <TypeScriptCompile Include="Code\IAmmo.ts" />
+    <TypeScriptCompile Include="Code\Scene\Ammo.ts" />
     <TypeScriptCompile Include="Code\LanguagePacks\Bulgarian.ts" />
     <TypeScriptCompile Include="Code\LanguagePacks\English.ts" />
     <TypeScriptCompile Include="Code\LanguagePacks\ILanguagePack.ts" />
-    <TypeScriptCompile Include="Code\LaserOfDeath.ts" />
+    <TypeScriptCompile Include="Code\Scene\ISelectableObject.ts" />
+    <TypeScriptCompile Include="Code\Scene\LaserOfDeath.ts" />
     <TypeScriptCompile Include="Code\Main.ts" />
     <TypeScriptCompile Include="Code\Managers\ContentLibrary.ts" />
     <TypeScriptCompile Include="Code\Managers\ContentManager.ts" />
     <TypeScriptCompile Include="Code\Managers\IDeferred.ts" />
     <TypeScriptCompile Include="Code\Managers\InputManager.ts" />
     <TypeScriptCompile Include="Code\Managers\MouseData.ts" />
+    <TypeScriptCompile Include="Code\Scene\Scene.ts" />
     <TypeScriptCompile Include="Code\StringExtenstions.d.ts" />
-    <TypeScriptCompile Include="Code\Terrain.ts" />
+    <TypeScriptCompile Include="Code\Scene\Terrain.ts" />
     <TypeScriptCompile Include="Code\Utilities.ts" />
     <TypeScriptCompile Include="Scripts\typings\qunit\qunit.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\stats.js\stats.d.ts" />
