--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -19,14 +19,17 @@
   <ItemGroup>
     <Content Include="app.css" />
     <Content Include="Code\StringExtensions.js" />
+    <Content Include="Content\Models\bore\barrelsUV.jpg" />
+    <Content Include="Content\Models\bore\barrels_one.js" />
+    <Content Include="Content\Models\bore\barrels_two.js" />
     <Content Include="Content\Models\bore\four.jpg" />
     <Content Include="Content\Models\bore\Lightmap.png" />
     <Content Include="Content\Models\bore\objectHouse1.js" />
     <Content Include="Content\Models\bore\objectMarket.js" />
-    <Content Include="Content\Models\bore\objectTerrain.js" />
     <Content Include="Content\Models\bore\one.jpg" />
     <Content Include="Content\Models\bore\rooftxt.jpg" />
-    <Content Include="Content\Models\bore\terraintextr.png" />
+    <Content Include="Content\Models\bore\objectTerrain.js" />
+    <Content Include="Content\Models\bore\terraintextr.jpg" />
     <Content Include="Content\Models\bore\three.jpg" />
     <Content Include="Content\Models\bore\two.jpg" />
     <Content Include="Content\Models\bore\walls.jpg" />
