Human and pistol added

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -19,44 +19,57 @@
   <ItemGroup>
     <Content Include="app.css" />
     <Content Include="Code\StringExtensions.js" />
-    <Content Include="Content\Models\bore\house_two.js" />
-    <Content Include="Content\Models\bore\Lightmap.png" />
-    <Content Include="Content\Models\bore\monastery_object.js" />
-    <Content Include="Content\Models\bore\monastery_texture.jpg" />
-    <Content Include="Content\Models\bore\rooftxt.jpg" />
-    <Content Include="Content\Models\bore\barrelsUV.jpg" />
-    <Content Include="Content\Models\bore\barrels_one.js" />
-    <Content Include="Content\Models\bore\barrels_two.js" />
-    <Content Include="Content\Models\bore\four.jpg" />
-    <Content Include="Content\Models\bore\Lightmap.png" />
-    <Content Include="Content\Models\bore\objectHouse1.js" />
-    <Content Include="Content\Models\bore\objectMarket.js" />
-    <Content Include="Content\Models\bore\one.jpg" />
-    <Content Include="Content\Models\bore\rooftxt.jpg" />
-    <Content Include="Content\Models\bore\objectTerrain.js" />
-    <Content Include="Content\Models\bore\terraintextr.jpg" />
-    <Content Include="Content\Models\bore\three.jpg" />
-    <Content Include="Content\Models\bore\two.jpg" />
-    <Content Include="Content\Models\bore\walls.jpg" />
+    <Content Include="Content\Models\Buildings\house_two.js" />
+    <Content Include="Content\Models\Buildings\Lightmap.png" />
+    <Content Include="Content\Models\Buildings\Monastery\monastery_object.js" />
+    <Content Include="Content\Models\Buildings\Monastery\monastery_texture.jpg" />
+    <Content Include="Content\Models\Buildings\House_01\rooftxt.jpg" />
+    <Content Include="Content\Models\Buildings\Barrels\barrelsUV.jpg" />
+    <Content Include="Content\Models\Buildings\Barrels\barrels_one.js" />
+    <Content Include="Content\Models\Buildings\Barrels\barrels_two.js" />
+    <Content Include="Content\Models\Buildings\House_02\four.jpg" />
+    <Content Include="Content\Models\Buildings\Lightmap.png" />
+    <Content Include="Content\Models\Buildings\House_01\objectHouse1.js" />
+    <Content Include="Content\Models\Buildings\House_02\objectMarket.js" />
+    <Content Include="Content\Models\Buildings\House_02\one.jpg" />
+    <Content Include="Content\Models\Buildings\rooftxt.jpg" />
+    <Content Include="Content\Models\Buildings\objectTerrain.js" />
+    <Content Include="Content\Models\Buildings\terraintextr.jpg" />
+    <Content Include="Content\Models\Buildings\House_02\three.jpg" />
+    <Content Include="Content\Models\Buildings\House_02\two.jpg" />
+    <Content Include="Content\Models\Buildings\House_01\walls.jpg" />
     <Content Include="Content\Models\Engineer\engineer.js" />
     <Content Include="Content\Models\Engineer\engineer_head.jpg" />
     <Content Include="Content\Models\Engineer\engineer_red.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\BoychoAnim.js" />
+    <Content Include="Content\Models\Heroes\Boycho\BoychoAnimation.js" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Cloth.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Head.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Left_Eye.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Left_Hand.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Pants.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Right_Eye.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Right_Hand.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\Boycho_Tie.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff2_01.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff2_02.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff2_03.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff3_02.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff3_03.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff_01.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff_02.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff_022.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\diff_03.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\PistolAnimation.js" />
+    <Content Include="Content\Models\Heroes\Boycho\Test1.js" />
+    <Content Include="Content\Models\Heroes\Boycho\Test2.js" />
     <Content Include="Content\Models\Spartan\Ccloth.png" />
     <Content Include="Content\Models\Spartan\Cgold.png" />
     <Content Include="Content\Models\Spartan\Cnormal.png" />
     <Content Include="Content\Models\Spartan\Cskin.png" />
     <Content Include="Content\Models\Spartan\Csword.png" />
     <Content Include="Content\Models\Spartan\spartan.js" />
-    <Content Include="Content\Models\Test\diff2_01.jpg" />
-    <Content Include="Content\Models\Test\diff2_02.jpg" />
-    <Content Include="Content\Models\Test\diff2_03.jpg" />
-    <Content Include="Content\Models\Test\diff3_02.jpg" />
-    <Content Include="Content\Models\Test\diff3_03.jpg" />
-    <Content Include="Content\Models\Test\diff_01.jpg" />
-    <Content Include="Content\Models\Test\diff_02.jpg" />
-    <Content Include="Content\Models\Test\diff_03.jpg" />
-    <Content Include="Content\Models\Test\Pistol.jpg" />
-    <Content Include="Content\Models\Test\TestEight.js" />
+    <Content Include="Content\Models\Heroes\Boycho\Pistol.jpg" />
     <Content Include="Content\Quests\default.js" />
     <Content Include="Content\Scenes\default.js" />
     <Content Include="Content\Textures\BlackWhiteChecker.jpg" />
