--- a/ProjectThralldom/web.config
+++ b/ProjectThralldom/web.config
@@ -10,5 +10,8 @@
   </system.web>
   <system.webServer>
     <directoryBrowse enabled="true"/>
+    <handlers>
+      <add name="StaticHandler" verb="*" path="*.anim" type="System.Web.StaticFileHandler" preCondition="integratedMode" />
+    </handlers>
   </system.webServer>
 </configuration>
