Save Graphic branche

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -38,11 +38,11 @@
     <Content Include="Content\Models\Buildings\House_02\three.jpg" />
     <Content Include="Content\Models\Buildings\House_02\two.jpg" />
     <Content Include="Content\Models\Buildings\House_01\walls.jpg" />
+    <Content Include="Content\Models\Buildings\Test1.js" />
+    <Content Include="Content\Models\Buildings\Test1.png" />
     <Content Include="Content\Models\Engineer\engineer.js" />
     <Content Include="Content\Models\Engineer\engineer_head.jpg" />
     <Content Include="Content\Models\Engineer\engineer_red.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\BoychoAnim.js" />
-    <Content Include="Content\Models\Heroes\Boycho\BoychoAnimation.js" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Cloth.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Head.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Left_Eye.jpg" />
@@ -51,18 +51,8 @@
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Right_Eye.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Right_Hand.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Tie.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff2_01.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff2_02.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff2_03.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff3_02.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff3_03.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff_01.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff_02.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff_022.jpg" />
-    <Content Include="Content\Models\Heroes\Boycho\diff_03.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\PistolAnimation.js" />
-    <Content Include="Content\Models\Heroes\Boycho\Test1.js" />
-    <Content Include="Content\Models\Heroes\Boycho\Test2.js" />
+    <Content Include="Content\Models\Heroes\Boycho\BoychoAnimation.js" />
     <Content Include="Content\Models\Spartan\Ccloth.png" />
     <Content Include="Content\Models\Spartan\Cgold.png" />
     <Content Include="Content\Models\Spartan\Cnormal.png" />
